# serializer version: 1
# name: TestCreateUserView.test_post_existing_email[/-/][create_user_view_content]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-lg-8 col-12">
                      <h1 class="s-title-01__title h1">Se connecter | S'inscrire</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12 col-lg-7">
                      <p>
                          Un lien de connexion vous a été envoyé à l'adresse samuel@jackson.com. Veuillez vérifier votre boîte de réception et cliquer sur le lien pour vous connecter.
                      </p>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestCreateUserView.test_post_existing_email[/topics/-/topics/][create_user_view_content]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-lg-8 col-12">
                      <h1 class="s-title-01__title h1">Se connecter | S'inscrire</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12 col-lg-7">
                      <p>
                          Un lien de connexion vous a été envoyé à l'adresse samuel@jackson.com. Veuillez vérifier votre boîte de réception et cliquer sur le lien pour vous connecter.
                      </p>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestCreateUserView.test_post_existing_email[http://www.unallowed_host.com-/][create_user_view_content]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-lg-8 col-12">
                      <h1 class="s-title-01__title h1">Se connecter | S'inscrire</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12 col-lg-7">
                      <p>
                          Un lien de connexion vous a été envoyé à l'adresse samuel@jackson.com. Veuillez vérifier votre boîte de réception et cliquer sur le lien pour vous connecter.
                      </p>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestCreateUserView.test_post_new_email[/-/][create_user_view_content]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-lg-8 col-12">
                      <h1 class="s-title-01__title h1">Se connecter | S'inscrire</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12 col-lg-7">
                      <p>
                          Un lien de connexion vous a été envoyé à l'adresse john@travolta.lt. Veuillez vérifier votre boîte de réception et cliquer sur le lien pour vous connecter.
                      </p>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestCreateUserView.test_post_new_email[/topics/-/topics/][create_user_view_content]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-lg-8 col-12">
                      <h1 class="s-title-01__title h1">Se connecter | S'inscrire</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12 col-lg-7">
                      <p>
                          Un lien de connexion vous a été envoyé à l'adresse john@travolta.lt. Veuillez vérifier votre boîte de réception et cliquer sur le lien pour vous connecter.
                      </p>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestCreateUserView.test_post_new_email[http://www.unallowed_host.com-/][create_user_view_content]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-lg-8 col-12">
                      <h1 class="s-title-01__title h1">Se connecter | S'inscrire</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12 col-lg-7">
                      <p>
                          Un lien de connexion vous a été envoyé à l'adresse john@travolta.lt. Veuillez vérifier votre boîte de réception et cliquer sur le lien pour vous connecter.
                      </p>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestLoginView.test_content[/][login_view_content]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-lg-8 col-12">
                      <h1 class="s-title-01__title h1">Se connecter | S'inscrire</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12 col-lg-7">
                      <div class="c-form">
                          <div class="text-center">
                              <p>
                                  ProConnect vous permet d'accéder à de nombreux services en ligne en utilisant l'un de vos comptes professionnels existants.
                              </p>
                              <a class="proconnect-button" href="/pro_connect/authorize?next=/" rel="nofollow"></a>
                              <p>
                                  <a href="https://proconnect.gouv.fr/" rel="noopener noreferrer" target="_blank" title="Qu’est-ce que AgentConnect ? - nouvelle fenêtre">
                                      Qu’est-ce que ProConnect ?
                                  </a>
                              </p>
                          </div>
                          <hr class="my-5" data-it-text="ou"/>
                          <form action="." enctype="multipart/form-data" method="post" novalidate="">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                              
                              <fieldset>
                                  <p class="h4">Se connecter avec votre email</p>
                                  <p class="text-muted">✨ Nous allons vous envoyer un code magique pour vous connecter sans mot de passe.</p>
                                  
  
  <div class="form-group" id="div_id_email">
      
          
          
              <input class="form-control" id="id_email" maxlength="320" name="email" placeholder="Votre adresse email" required="" type="email"/>
          
      
      
      
      
  </div>
  
                              </fieldset>
                              <div class="row">
                                  <div class="col-12">
                                      <div class="form-row align-items-center justify-content-end gx-3">
                                          <div class="form-group col col-lg-auto order-2 order-lg-3">
                                              <input name="next" type="hidden" value="/"/>
                                              <input class="btn btn-block btn-primary" type="submit" value="Recevoir le lien de connexion"/>
                                          </div>
                                      </div>
                                  </div>
                              </div>
                          </form>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestLoginView.test_content[/topics/][login_view_content]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-lg-8 col-12">
                      <h1 class="s-title-01__title h1">Se connecter | S'inscrire</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12 col-lg-7">
                      <div class="c-form">
                          <div class="text-center">
                              <p>
                                  ProConnect vous permet d'accéder à de nombreux services en ligne en utilisant l'un de vos comptes professionnels existants.
                              </p>
                              <a class="proconnect-button" href="/pro_connect/authorize?next=/topics/" rel="nofollow"></a>
                              <p>
                                  <a href="https://proconnect.gouv.fr/" rel="noopener noreferrer" target="_blank" title="Qu’est-ce que AgentConnect ? - nouvelle fenêtre">
                                      Qu’est-ce que ProConnect ?
                                  </a>
                              </p>
                          </div>
                          <hr class="my-5" data-it-text="ou"/>
                          <form action="." enctype="multipart/form-data" method="post" novalidate="">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                              
                              <fieldset>
                                  <p class="h4">Se connecter avec votre email</p>
                                  <p class="text-muted">✨ Nous allons vous envoyer un code magique pour vous connecter sans mot de passe.</p>
                                  
  
  <div class="form-group" id="div_id_email">
      
          
          
              <input class="form-control" id="id_email" maxlength="320" name="email" placeholder="Votre adresse email" required="" type="email"/>
          
      
      
      
      
  </div>
  
                              </fieldset>
                              <div class="row">
                                  <div class="col-12">
                                      <div class="form-row align-items-center justify-content-end gx-3">
                                          <div class="form-group col col-lg-auto order-2 order-lg-3">
                                              <input name="next" type="hidden" value="/topics/"/>
                                              <input class="btn btn-block btn-primary" type="submit" value="Recevoir le lien de connexion"/>
                                          </div>
                                      </div>
                                  </div>
                              </div>
                          </form>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestLoginView.test_content[None][login_view_content]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-lg-8 col-12">
                      <h1 class="s-title-01__title h1">Se connecter | S'inscrire</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12 col-lg-7">
                      <div class="c-form">
                          <div class="text-center">
                              <p>
                                  ProConnect vous permet d'accéder à de nombreux services en ligne en utilisant l'un de vos comptes professionnels existants.
                              </p>
                              <a class="proconnect-button" href="/pro_connect/authorize?next=" rel="nofollow"></a>
                              <p>
                                  <a href="https://proconnect.gouv.fr/" rel="noopener noreferrer" target="_blank" title="Qu’est-ce que AgentConnect ? - nouvelle fenêtre">
                                      Qu’est-ce que ProConnect ?
                                  </a>
                              </p>
                          </div>
                          <hr class="my-5" data-it-text="ou"/>
                          <form action="." enctype="multipart/form-data" method="post" novalidate="">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                              
                              <fieldset>
                                  <p class="h4">Se connecter avec votre email</p>
                                  <p class="text-muted">✨ Nous allons vous envoyer un code magique pour vous connecter sans mot de passe.</p>
                                  
  
  <div class="form-group" id="div_id_email">
      
          
          
              <input class="form-control" id="id_email" maxlength="320" name="email" placeholder="Votre adresse email" required="" type="email"/>
          
      
      
      
      
  </div>
  
                              </fieldset>
                              <div class="row">
                                  <div class="col-12">
                                      <div class="form-row align-items-center justify-content-end gx-3">
                                          <div class="form-group col col-lg-auto order-2 order-lg-3">
                                              <input name="next" type="hidden" value=""/>
                                              <input class="btn btn-block btn-primary" type="submit" value="Recevoir le lien de connexion"/>
                                          </div>
                                      </div>
                                  </div>
                              </div>
                          </form>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestLoginView.test_content[http://www.unallowed_host.com][login_view_content]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-lg-8 col-12">
                      <h1 class="s-title-01__title h1">Se connecter | S'inscrire</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12 col-lg-7">
                      <div class="c-form">
                          <div class="text-center">
                              <p>
                                  ProConnect vous permet d'accéder à de nombreux services en ligne en utilisant l'un de vos comptes professionnels existants.
                              </p>
                              <a class="proconnect-button" href="/pro_connect/authorize?next=http://www.unallowed_host.com" rel="nofollow"></a>
                              <p>
                                  <a href="https://proconnect.gouv.fr/" rel="noopener noreferrer" target="_blank" title="Qu’est-ce que AgentConnect ? - nouvelle fenêtre">
                                      Qu’est-ce que ProConnect ?
                                  </a>
                              </p>
                          </div>
                          <hr class="my-5" data-it-text="ou"/>
                          <form action="." enctype="multipart/form-data" method="post" novalidate="">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                              
                              <fieldset>
                                  <p class="h4">Se connecter avec votre email</p>
                                  <p class="text-muted">✨ Nous allons vous envoyer un code magique pour vous connecter sans mot de passe.</p>
                                  
  
  <div class="form-group" id="div_id_email">
      
          
          
              <input class="form-control" id="id_email" maxlength="320" name="email" placeholder="Votre adresse email" required="" type="email"/>
          
      
      
      
      
  </div>
  
                              </fieldset>
                              <div class="row">
                                  <div class="col-12">
                                      <div class="form-row align-items-center justify-content-end gx-3">
                                          <div class="form-group col col-lg-auto order-2 order-lg-3">
                                              <input name="next" type="hidden" value="http://www.unallowed_host.com"/>
                                              <input class="btn btn-block btn-primary" type="submit" value="Recevoir le lien de connexion"/>
                                          </div>
                                      </div>
                                  </div>
                              </div>
                          </form>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestLoginView.test_post[/-/][login_view_content]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-lg-8 col-12">
                      <h1 class="s-title-01__title h1">Se connecter | S'inscrire</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12 col-lg-7">
                      <p>
                          Un lien de connexion vous a été envoyé à l'adresse samuel@jackson.com. Veuillez vérifier votre boîte de réception et cliquer sur le lien pour vous connecter.
                      </p>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestLoginView.test_post[/topics/-/topics/][login_view_content]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-lg-8 col-12">
                      <h1 class="s-title-01__title h1">Se connecter | S'inscrire</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12 col-lg-7">
                      <p>
                          Un lien de connexion vous a été envoyé à l'adresse samuel@jackson.com. Veuillez vérifier votre boîte de réception et cliquer sur le lien pour vous connecter.
                      </p>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestLoginView.test_post[http://www.unallowed_host.com-/][login_view_content]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
              
                  
      <section class="s-title-01 mt-lg-5">
          <div class="s-title-01__container container">
              <div class="s-title-01__row row">
                  <div class="s-title-01__col col-lg-8 col-12">
                      <h1 class="s-title-01__title h1">Se connecter | S'inscrire</h1>
                  </div>
              </div>
          </div>
      </section>
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12 col-lg-7">
                      <p>
                          Un lien de connexion vous a été envoyé à l'adresse samuel@jackson.com. Veuillez vérifier votre boîte de réception et cliquer sur le lien pour vous connecter.
                      </p>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: TestSendMagicLink.test_send_magic[PROD-True-0][send_magic_link_payload]
  '{"sender":{"name":"La Communauté","email":"noreply@inclusion.gouv.fr"},"to":[{"email":"samuel@jackson.com"}],"params":{"display_name":"Samuel J.","login_link":"LOGIN_LINK"},"templateId":31}'
# ---
# name: TestSendMagicLink.test_send_magic[TEST-True-0][send_magic_link_payload]
  '{"sender":{"name":"La Communauté","email":"noreply@inclusion.gouv.fr"},"to":[{"email":"samuel@jackson.com"}],"params":{"display_name":"Samuel J.","login_link":"LOGIN_LINK"},"templateId":31}'
# ---
